--- a/css/style.css
+++ b/css/style.css
@@ -68,6 +68,7 @@ body {
   font-family: "Poppins", sans-serif;
   overflow-x: hidden;
   background-color: var(--bg-color);
+  transition: all 0.7s ease-in-out;
 }
 
 ::selection {
@@ -91,7 +92,8 @@ ul {
 .text {
   color: var(--text-color);
   font-size: 0.9rem;
-  margin: 2rem 0;
+  margin: 3rem 0;
+  line-height: 1.4;
 }
 .Container {
   position: relative;
@@ -727,24 +729,112 @@ nav.Container {
 .Testimonials .Container {
   display: grid;
   grid-template-columns: 1.2fr 1fr;
+  align-items: center;
 }
-.reviews {
+
+/* --------------- Testimonials Section Styling --------------- */
+.swiper {
   width: 100%;
-  height: 500px;
+  height: 300px;
   background-color: var(--bg-color-2);
   border-radius: 15px;
+  padding: 2rem 0 2.5rem;
+}
+.text {
+  line-height: 2;
+
+  display: block;
+}
+.Client-info h4 {
+  font-weight: 500;
+  font-size: 1.05rem;
+  margin-bottom: 0.3rem;
+  color: var(--heading-color);
+}
+.Client-info h5 {
+  font-weight: 500;
+  font-size: 0.8rem;
+
+  color: var(--text-color);
+}
+.Client-info h5 a {
+  color: var(--main-color-1);
+}
+.swiper-slide {
+  padding: 0 2.5rem;
+}
+.swiper-pagination-bullet {
+  background-color: var(--main-color-1);
+  opacity: 0.3;
+  width: 7px;
+  height: 7px;
+  cursor: pointer;
+}
+.swiper-pagination-bullet-active {
+  background-color: var(--main-color-1);
+  opacity: 1;
+  width: 11px;
+  height: 11px;
+  cursor: pointer;
+}
+
+.client {
+  width: 100%;
+  display: grid;
+  grid-template-columns: 85px 1fr;
+  align-items: center;
+  gap: 1.5rem;
+}
+.client img {
+  width: 100%;
 }
 .Testimonials-Title {
-  padding: 2rem;
+  padding-left: 1rem;
+  width: 350px;
+}
+.Testimonials-Title > * {
+  color: #fff;
+}
+.Testimonials {
+  padding: var(--section-padding) 0 calc(var(--section-padding) + 120px);
 }
 .section-background {
   position: absolute;
   width: 100vw;
   max-width: 75rem;
-  height: 100%;
+  left: 50%;
+  top: 15px;
+  transform: translateX(calc(-50% + 190px));
+  height: calc(100% + 120px);
   background-color: var(--main-color-1);
+  z-index: -1;
+  background-image: linear-gradient(
+    55deg,
+    var(--main-color-2) 20%,
+    var(--main-color-1) 20%
+  );
+  border-bottom-left-radius: 60px;
 }
-/* --------------- Testimonials Section Styling --------------- */
+.section-background .test-img {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  height: 460px;
+}
+.section-background .circle {
+  position: absolute;
+  top: 89%;
+  left: 45%;
+  width: 170px;
+  transform: translate(-50%, -50%);
+}
+.section-background .Square {
+  position: absolute;
+  left: 77%;
+  top: 15%;
+
+  transform: translate(-50%, -50%);
+}
 
 /* --------------- Contact Section Styling --------------- */
 
